--- a/index.html
+++ b/index.html
@@ -6,234 +6,96 @@
 -->
 <html>
 	<head>
-  <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-		<title>Shahil Saha</title>
+		<link rel="shortcut icon" type="image/png" href="images/Solar.png">
+		<title>Solar System</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!-- Google -->
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"  rel="stylesheet">
-		<!--Font Awesome-->
-		<link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
-<link href="/mywebsitefolder/fontawesome/fontawesome-all.css" rel="stylesheet">
-
-<!-- Fizzed.com -->
-<link rel="stylesheet" href="assets/css/font-mfizz.css">
-
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
+
+
+
+<!-- background-->
+<!-- <div style="background-image: url('images/pacman2.png');"> -->
+	<style>
+	body {
+	  background-image: url('images/SolarSystem.jpg');
+	  background-repeat: no-repeat;
+	  background-attachment: fixed;
+	  background-size: 100% 100%;
+	}
+
+	<style>
+
+	div.background {
+  background: url(klematis.jpg) repeat;
+  border: 2px solid black;
+}
+	div.transbox {
+	  margin: 30px;
+	  background-color: #000000;
+	  border: 1px solid black;
+	  opacity: 0.6;
+	}
+
+	div.transbox p {
+	  margin: 5%;
+	  font-weight: bold;
+	  color: #FFFCF7;
+	}
+
+	</style>
+	<p align="right">
+	<a href="index.html" class="button">Go Back</a>
+	</p>
+	</style>
+
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Header -->
-					<header id="header" class="alt">
-						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
-						<h1><b>Shahil Saha</b></h1>
-						<p>Games Development Student at Staffordshire University<br />
+					<header id="header">
+						<h1>Solar System(OpenGL)</h1>
+
 					</header>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">Projects</a></li>
-							<li><a href="#second">Skills</a></li>
-							<li><a href="#third">Hobbies</a></li>
-							<li><a href="#fourth">Education</a></li>
-						</ul>
-					</nav>
-
 				<!-- Main -->
-					<div id="main">
+					<!-- <div id="main"> -->
+						<div class="background">
+							<div class="transbox">
+								<p style="text-align:left;">This is a solar system written in OpenGL in C++ where my aim was to create the solar system.
+<br>Throughout my duration I created the planets revolving around the sun on their orbit and the moon revolving around the Earth.<br>
+I included the keyboard controls which is used to control the camera view and the mouse controls which on right click opens an option box where there are some lighting options to choose from.<br>
+This was done over 3 months and by the end of the project I gained an in-depth knowledge o C++ and some brilliant game programming skills like reading from files like reading OBJ files into the scene other than the basic txt files.</p>
+							</div>
+						</div>
+						<!-- Content -->
+							<!-- <section id="content" class="main"> -->
+							<!-- </section> -->
 
-						<!-- Introduction -->
-							<section id="intro" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>About me</h2>
-										</header>
-										<p>I am a student at Staffordshire University doing BSc (Hons) Game Development at my First year.
-									<br>I have loved playing games since I was five. So, after my 10th I decided to turn my hobby into my profession
-									and therefore I am here for this course. Although I dont have much experience with Games Development industry but
-									I am loving it and would love to learn every bit of it throughout my time at the university.</p>
-										<ul class="actions">
-											<li><a href="https://staffsuniversity-my.sharepoint.com/:b:/r/personal/s015695k_student_staffs_ac_uk/Documents/CV/Shahil%20Saha%20CV.pdf?csf=1&web=1&e=4YPC7S" class="button">Resume</a></li>
-										</ul>
-									</div>
-									<span class="image"><img src="images/Profile.jpg" alt="" /></span>
-								</div>
+					</div>
+
+					<!-- Footer -->
+						<footer id="footer">
+							<section>
 							</section>
-
-						<!-- First Section -->
-						<!-- Pacman -->
-						<section id="first" class="main special">
-							<header class="major">
-								<h2>Projects</h2>
-							</header>
-							<ul class="features">
-								<li>
-									<div class="col s12 m7">
-								    <div class="card Vertical">
-								      <div class="card-image">
-								        <a href="https://github.com/shahilsaha05uk/Pacman.git"> <img src="images/pacman2.png" alt="Avatar"></a>
-								      </div>
-								      <div class="card-stacked">
-								        <div class="card-content">
-								          <p>Pacman </p>
-														<a href="https://github.com/shahilsaha05uk/Pacman.git">Github Link</a>
-								        </div>
-
-								        <div class="card-action">
-								        </div>
-								      </div>
-								    </div>
-								  </div>
-								</li>
-
-								<!-- C++ -->
-								<li>
-									<div class="col s12 m7">
-										<div class="card Vertical">
-											<div class="card-image">
-												<a href="https://github.com/shahilsaha05uk/C_PlusPlus.git">	<img src="images/C++.png"></a>
-											</div>
-											<div class="card-stacked">
-												<div class="card-content">
-													<p>C++</p>
-												</div>
-												<div class="card-action">
-													<a href="https://github.com/shahilsaha05uk/C_PlusPlus.git">Github Link</a>
-												</div>
-											</div>
-										</div>
-									</div>
-								</li>
-
-
-								<!-- OpenGL -->
-								<li>
-									<div class="col s12 m7">
-										<div class="card Vertical">
-											<div class="card-image">
-												<a href="https://github.com/shahilsaha05uk/SolarSystem.git">	<img src="images/Solar.png"></a>
-											</div>
-											<div class="card-stacked">
-												<div class="card-content">
-													<p>Solar System</p>
-												</div>
-												<div class="card-action">
-													<a href="https://github.com/shahilsaha05uk/SolarSystem.git">Github Link</a>
-												</div>
-												<a href="SolarSystem.html" class="button">More Info</a>
-											</div>
-										</div>
-									</div>
-								</li>
-
-								<!-- Mario -->
-								<li>
-									<div class="col s12 m7">
-										<div class="card Vertical">
-
-											<div class="card-image">
-												<a href="https://github.com/shahilsaha05uk/Mario.git">	<img src="images/mario.png"></a>
-											</div>
-											<div class="card-stacked">
-												<div class="card-content">
-													<p>Mario</p>
-												</div>
-												<div class="card-action">
-													<a href="https://github.com/shahilsaha05uk/Mario.git">Github Link</a>
-												</div>
-											</div>
-										</div>
-									</div>
-								</li>
-						</section>
-
-						<!-- Second Section -->
-							<section id="second" class="main special">
-								<header class="major">
-									<h2>Skills</h2>
-								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<i class="material-icons md-48">games</i>
-										<strong>Video Games Development</strong>
-									</li>
-									<li class="style2">
-									<i class="fab fa-microsoft md-48"></i>
-										<strong>MS Office</strong>
-									</li>
-									<li class="style3">
-									<i class="fas fa-code"></i>
-										<strong>C++</strong>
-									</li>
-									<li class="style4">
-										<span class="material-icons md-48">design_services</span>
-										<strong>Unity</strong>
-									</li>
+							<section>
+								<h2>Link</h2>
+								<dl class="alt">
+									<dt>Email</dt>
+									<dd><a href="#">shahilsaha05.uk@gmail.com</a></dd>
+								</dl>
+								<ul class="icons">
+									<li><a href="https://twitter.com/uk_saha_shahil" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.linkedin.com/in/shahil-saha" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://github.com/shahilsaha05uk" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
+						</footer>
 
-
-							<!-- Hobbies Section -->
-								<section id="third" class="main">
-									<header class="major">
-										<h2>Hobbies and Interests</h2>
-										<!-- <p>The<br />
-										posuere. Nulla massa urna, fermentum eget quam aliquet.</p> -->
-									</header>
-									<ul>
-									  <li>Video Games</li>
-									  <li>Technology</li>
-									  <li>Cooking</li>
-										<li>Coding</li>
-										<li>Fashion</li>
-									</ul>
-									</ul>
-								</section>
-
-
-								<!-- Education Section -->
-									<section id="fourth" class="main">
-										<header class="major">
-											<h2>Education</h2>
-											<!-- <p>The<br />
-											posuere. Nulla massa urna, fermentum eget quam aliquet.</p> -->
-										</header>
-										<ul>
-										  <li>Staffordshire University<br>2020 - Current <br>BSc Hons Game Development- First Year</li>
-										  <li>GD Goenka World School<br>2016 - 2020 <br>IBDP and IGCSE</li>
-										</ul>
-										</ul>
-									</section>
-
-
-
-
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-						</section>
-						<section>
-							<h2>Link</h2>
-							<dl class="alt">
-								<dt>Email</dt>
-								<dd><a href="#">shahilsaha05.uk@gmail.com</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="https://twitter.com/uk_saha_shahil" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.linkedin.com/in/shahil-saha" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
-								<li><a href="https://github.com/shahilsaha05uk" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-							</ul>
-						</section>
-					</footer>
-
-			</div>
+				</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -243,7 +105,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 
 	</body>
 </html>
