--- a/SolarSystemViewPage.html
+++ b/SolarSystemViewPage.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<link rel="shortcut icon" type="image/png" href="images/Solar.png">
-		<title>Solar System</title>
+		<title>Solar System View Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
